--- a/solfec-1.0/theory/timeint.lyx
+++ b/solfec-1.0/theory/timeint.lyx
@@ -107,7 +107,7 @@ DEF_LIM – a linearly implicit leap–frog scheme, [3]_
 
 \begin_layout Standard
 A time integration scheme is selected by modifying the *scheme* parameter
- of the :ref:`BODY object <solfec-user-body>`.
+ of the :ref:`BODY object <solfec-1.0-user-body>`.
 \end_layout
 
 \begin_layout Section
